--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 #wrap {
     position: relative;
     min-width: 320px;
+    height: 100vh;
 }
 /* header */
 #header-wrap {
@@ -33,7 +34,6 @@
     border-radius: 25px;
 }
 .menu-index p {
-    z-index: 1;
     width: 80px;
     padding: 16px 10px;
 }
@@ -49,17 +49,19 @@
 
 /* main*/
 #container-wrap {
-    position: relative;
     margin: 0 auto;
 }
 #profile {
     margin: 20px auto;
     text-align: center;
 }
+#profile-p1 {
+    width: 100%;
+    height: 100vh;
+}
 .profile-title {
+    margin: 50px auto;
     font-size: 35px;
 }
-.profile-title:nth-child(1) {
-    
-}
+
 
