--- a/css/style.css
+++ b/css/style.css
@@ -52,10 +52,10 @@
     margin: 0 auto;
 }
 #profile {
-    margin: 20px auto;
+    margin: 20px 10px;
     text-align: center;
 }
-#profile-p1 {
+#profile-p1, #profile-p2, #profile-p3 {
     width: 100%;
     height: 100vh;
 }
