--- a/css/style.css
+++ b/css/style.css
@@ -55,9 +55,13 @@
     margin: 20px 10px;
     text-align: center;
 }
-#profile-p1, #profile-p2, #profile-p3 {
+#profile-p1 {
     width: 100%;
     height: 100vh;
+}
+#profile-p2, #profile-p3 {
+    width: 100%;
+    height: 50vh;
 }
 .profile-title {
     margin: 50px auto;
